Split modules up
Makes it easier to know what the dependencies are between packages